api: the api now expects a ServerLevel (makes it much clearer, that this api should only be used on the server-side)